@@ -32,6 +32,7 @@
 #define _GNU_SOURCE
 
 #include "config.h"
+#include <assert.h>
 #include <dirent.h>
 #include <errno.h>
 #include <fcntl.h>
